@startuml Not Uygulaması 
title Not Uygulaması

class mainScreen 
class notsFragment

package Modal{
    class Notlar
}

package DB {
    interface NotDao
    class NotDataBase
    class itemDelete
}

NotDataBase ..> Modal : Kullanılıyor
NotDataBase ..> INotDao : Kullanılıyor
mainScreen ..>  DB : Kullanılıyor
notsFragment ..> DB : Kullanılıyor
NotDao ..> NotDataBase : Sorgular

hide empty members
@enduml